# POINTLESS

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.txt  config.h  main.cpp
.github/workflows/: build.yml
assets/: style.qss
assets/fonts/: OFL.txt
core/: halftone_renderer.cpp  halftone_renderer.h  image_utils.cpp  image_utils.h  symbol.cpp  symbol.h
resources/: README.txt
src/: app.rc  main.cpp  resources.qrc
src/archived_modes/core/: BlueprintRenderer.cpp  BlueprintRenderer.h  GlitchRenderer.cpp  GlitchRenderer.h  MetalEmbossRenderer.cpp  MetalEmbossRenderer.h  MotionBlurRenderer.cpp  MotionBlurRenderer.h  ThermalRenderer.cpp  ThermalRenderer.h
src/archived_modes/gpu_shaders/: filter.frag  filter.vert
src/core/: AnimParams.cpp  AnimParams.h  Animation.cpp  Animation.h  AsciiRenderer.cpp  AsciiRenderer.h  BlendCompositor.cpp  BlendCompositor.h  ColorMath.h  DitherRenderer.cpp  DitherRenderer.h  DitherVarErrData.h  DotGridRenderer.cpp  DotGridRenderer.h  GridGenerator.cpp  GridGenerator.h  HalftoneParams.h  HalftoneRenderer.cpp  HalftoneRenderer.h  ImageAdjuster.cpp  ImageAdjuster.h  MosaicRenderer.cpp  MosaicRenderer.h  PaletteStore.cpp  PaletteStore.h  Parallel.h  Params.h  ProjectIO.cpp  ProjectIO.h  VideoIO.cpp  VideoIO.h
src/gpu/: GpuFramePackage.h
src/gpu/shaders/: adjust.frag  adjust.vert  ascii.frag  ascii.vert  ascii_grid.frag  ascii_grid.vert  composite.frag  composite.vert  dither.frag  dither.vert  dot.frag  dot.vert  halftone.frag  halftone.vert  mosaic.frag  mosaic.vert
src/ui/: AdjustmentsPanel.cpp  AdjustmentsPanel.h  ControlPanel.cpp  ControlPanel.h  ControlsPanel.cpp  ControlsPanel.h  FilmstripWidget.cpp  FilmstripWidget.h  GpuCanvasWidget.cpp  GpuCanvasWidget.h  LayersPanel.cpp  LayersPanel.h  MainWindow.cpp  MainWindow.h  ModePanel.cpp  ModePanel.h  PreviewWidget.cpp  PreviewWidget.h  Theme.h  TimelineWidget.cpp  TimelineWidget.h  TonalControlsWidget.cpp  TonalControlsWidget.h  UiScale.h  Widgets.cpp  Widgets.h
src/workers/: RenderWorker.cpp  RenderWorker.h
tools/: capture.ps1  fetch-ffmpeg.ps1
ui/: colorpicker.cpp  colorpicker.h  halftoneparamswidget.cpp  halftoneparamswidget.h  imagefilewidget.cpp  imagefilewidget.h  mainwindow.cpp  mainwindow.h  previewwidget.cpp  previewwidget.h  symbolslotwidget.cpp  symbolslotwidget.h
